// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`IntegrationTest adding an integration test 1`] = `
{
  "description": "update snapshot for integration test "my-test-name"",
  "name": "integ:my-test-name:snapshot",
  "steps": [
    {
      "exec": "rm -fr test/my-test-name.integ.snapshot",
    },
    {
      "exec": "cdk8s synth --app "ts-node -P tsconfig.dev.json test/my-test-name.integ.ts" -o test/my-test-name.integ.snapshot",
    },
  ],
}
`;

exports[`IntegrationTest adding an integration test 2`] = `
{
  "description": "deploy integration test 'my-test-name' and capture snapshot",
  "name": "integ:my-test-name:deploy",
  "steps": [
    {
      "exec": "rm -fr test/.tmp/my-test-name.integ/deploy.cdk.out",
    },
    {
      "exec": "cdk8s synth --app "ts-node -P tsconfig.dev.json test/my-test-name.integ.ts" -o test/.tmp/my-test-name.integ/deploy.cdk.out",
    },
    {
      "exec": "kubectl apply -f test/.tmp/my-test-name.integ/deploy.cdk.out",
    },
    {
      "exec": "rm -fr test/my-test-name.integ.snapshot",
    },
    {
      "exec": "mv test/.tmp/my-test-name.integ/deploy.cdk.out test/my-test-name.integ.snapshot",
    },
  ],
}
`;

exports[`IntegrationTest adding an integration test 3`] = `
{
  "description": "assert the snapshot of integration test 'my-test-name'",
  "name": "integ:my-test-name:assert",
  "steps": [
    {
      "exec": "[ -d "test/my-test-name.integ.snapshot" ] || (echo "No snapshot available for integration test 'my-test-name'. Run 'projen integ:my-test-name:deploy' to capture." && exit 1)",
    },
    {
      "exec": "cdk8s synth --app "ts-node -P tsconfig.dev.json test/my-test-name.integ.ts" -o test/.tmp/my-test-name.integ/assert.cdk.out > /dev/null",
    },
    {
      "exec": "diff test/my-test-name.integ.snapshot/ test/.tmp/my-test-name.integ/assert.cdk.out/",
    },
  ],
}
`;

exports[`IntegrationTest adding an integration test 4`] = `
{
  "description": "update snapshot for all integration tests",
  "name": "integ:snapshot-all",
  "steps": [
    {
      "spawn": "integ:my-test-name:snapshot",
    },
  ],
}
`;

exports[`IntegrationTest adding an integration test 5`] = `
{
  "description": "Run tests",
  "name": "test",
  "steps": [
    {
      "exec": "jest --passWithNoTests --updateSnapshot",
      "receiveArgs": true,
    },
    {
      "spawn": "eslint",
    },
    {
      "spawn": "integ:my-test-name:assert",
    },
  ],
}
`;

exports[`IntegrationTest explicit name 1`] = `
{
  "description": "update snapshot for all integration tests",
  "name": "integ:snapshot-all",
  "steps": [
    {
      "spawn": "integ:foobar:snapshot",
    },
  ],
}
`;

exports[`IntegrationTest explicit name 2`] = `
{
  "description": "Run tests",
  "name": "test",
  "steps": [
    {
      "exec": "jest --passWithNoTests --updateSnapshot",
      "receiveArgs": true,
    },
    {
      "spawn": "eslint",
    },
    {
      "spawn": "integ:foobar:assert",
    },
  ],
}
`;
